added ability to give chromedriver executable permissions on a mac during a maven build or when a UI test is ran using chrome